Fri May  5 23:32:07 2000  Christopher Faylor <cgf@cygnus.com>

	* errno.cc (errmap): Correct DIRECTORY mapping to ENOTDIR.

2000-05-04  Mumit Khan  <khan@xraylith.wisc.edu>

	* Makefile.in (install): Install profile startup and library.

Wed May  3 21:54:11 2000  Christopher Faylor <cgf@cygnus.com>

	* configure.in: Use -gstabs+ as compile debug option.  This seems to
	promote better handling of symbols.
	* configure: Regenerate.
	* delqueue.cc (delqueue_list::process_queue): Allow ERROR_ACCESS_DENIED
	to indicate that a file is being shared under Windows 95.
	* syscalls.cc (_unlink): Use full path name.  Take special action for
	Windows 95.  Assume that an ERROR_ACCESS_DENIED indicates a sharing
	violation unless it's on a remote drive.  Punt if there is an
	ERROR_ACCESS_DENIED on a remote drive.

Wed May  3 18:07:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * errno.cc (errmap): Map ERROR_BAD_NETPATH to new errno ENOSHARE.
        (_sys_errlist): Add entry for ENOSHARE.
        (strerror): Add case for ENOSHARE.
        * syscalls.cc (stat_worker): Check for errno ENOSHARE.

Wed May  3 17:28:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * Makefile.in: Add dependencies for fhandler_random.o
        * fhandler.h: Add device type FH_RANDOM. Add class
        fhandler_dev_random.
        * fhandler_random.cc: New file. Implementation of
        fhandler_dev_random.
        * hinfo.cc (build_fhandler): Add case for FH_RANDOM.
        * path.cc: Add device names for random devices to
        windows_device_names.
        (get_device_number): Add if branch for random devices.
        (win32_device_name): Add device name generation for
        random devices.
        winsup.h: Include <wincrypt.h>.

2000-05-02  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* path.cc (mount_info::conv_to_win32_path): Previous patch 
	failed to set flags on a win32 path.

Tue May  2 11:34:00 2000  Corinna Vinschen <corinna@vinschen.de>
